crates/ty_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_Possibly_invalid_`__…_(6388761c90a0555c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - Possibly invalid `__iter__` methods
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Iterator:
 2 |     def __next__(self) -> int:
 3 |         return 42
 4 | 
 5 | def _(flag: bool):
 6 |     class Iterable1:
 7 |         if flag:
 8 |             def __iter__(self) -> Iterator:
 9 |                 return Iterator()
10 |         else:
11 |             def __iter__(self, invalid_extra_arg) -> Iterator:
12 |                 return Iterator()
13 | 
14 |     # error: [not-iterable]
15 |     for x in Iterable1():
16 |         reveal_type(x)  # revealed: int
17 | 
18 |     class Iterable2:
19 |         if flag:
20 |             def __iter__(self) -> Iterator:
21 |                 return Iterator()
22 |         else:
23 |             __iter__: None = None
24 | 
25 |     # error: [not-iterable]
26 |     for x in Iterable2():
27 |         # TODO: `int` would probably be better here:
28 |         reveal_type(x)  # revealed: int | Unknown
```

# Diagnostics

```
error[not-iterable]: Object of type `Iterable1` may not be iterable
  --> src/mdtest_snippet.py:15:14
   |
14 |     # error: [not-iterable]
15 |     for x in Iterable1():
   |              ^^^^^^^^^^^
16 |         reveal_type(x)  # revealed: int
   |
info: Its `__iter__` method may have an invalid signature
info: Type of `__iter__` is `(bound method Iterable1.__iter__() -> Iterator) | (bound method Iterable1.__iter__(invalid_extra_arg) -> Iterator)`
info: Expected signature for `__iter__` is `def __iter__(self): ...`
info: rule `not-iterable` is enabled by default

```

```
error[not-iterable]: Object of type `Iterable2` may not be iterable
  --> src/mdtest_snippet.py:26:14
   |
25 |     # error: [not-iterable]
26 |     for x in Iterable2():
   |              ^^^^^^^^^^^
27 |         # TODO: `int` would probably be better here:
28 |         reveal_type(x)  # revealed: int | Unknown
   |
info: Its `__iter__` attribute (with type `(bound method Iterable2.__iter__() -> Iterator) | None`) may not be callable
info: rule `not-iterable` is enabled by default

```
